[gd_scene load_steps=3 format=2]

[ext_resource path="res://Utils/Hitbox.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.1704
height = 69.8856

[node name="Hitbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13.0339 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Hitbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
